--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "4.6",
     "font-awesome": "^4.7.0",
     "jquery": "3.6",
+    "ngx-toastr": "^14.2.2",
     "popper.js": "1.16",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
