--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ngrx/store": "^12.2.0",
     "bootstrap": "4.6",
     "font-awesome": "^4.7.0",
     "jquery": "3.6",
